--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>hw 9</title>
+    <title>to the finish line!!</title>
     <script src="p5.min.js"></script>
     <script src="p5.play.js"></script>
     <script src="p5.sound.js"></script>
